# GeoDetector

./: .gitignore  GeoDetector_2018_Example(Disease Dataset)_test.xlsx  README.md  example.ipynb  geodetector.py  pyproject.toml
.github/workflows/: python-publish.yml
src/geodetector/: geodetector.py
src/py_geodetector/: __init__.py  geodetector.py
src/py_geodetector/example_data/: disease.csv
src/pygd/: geodetector.py
