[build-system]
requires = [
    "numpy",
    "pandas",
    "scipy",
    "hatchling",
    "matplotlib"
]
build-backend = "hatchling.build"


[project]
name = "py_geodetector"
version = "0.2.1"
authors = [
    { name = "djw", email = "djweasy@163.com" },
]
description = "A simple Python package for the geodetector"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/djw-easy/GeoDetector"
"Bug Tracker" = "https://github.com/djw-easy/GeoDetector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geodetector"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/geodetector",
]
